fix gap

--- a/tetris.css
+++ b/tetris.css
@@ -14,7 +14,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
